// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`audit bootstrap — buildScope (getBootstrap) > matches the pinned bootstrap snapshot 1`] = `
{
  "all": {
    "conservative": [
      {
        "assist_url": "https://assist.org/transfer/results?year=76&institution=1&agreement=100&agreementType=to&view=agreement&viewBy=major&viewSendingAgreements=false&viewByKey=76%2F1%2Fto%2F100%2FMajor%2Fm-cs",
        "community_college": "CC One",
        "doc_id": "000000000000000000000012",
        "id": "000000000000000000000012",
        "major": "Computer Science",
        "notes": "",
        "result": "conservative",
        "source": "verify",
        "system": "uc",
        "uc_school": "UC Alpha",
        "verified_at": "2026-05-02T00:00:00.000Z",
      },
    ],
    "errors": [
      {
        "assist_url": "https://assist.org/transfer/results?year=76&institution=1&agreement=100&agreementType=to&view=agreement&viewBy=major&viewSendingAgreements=false&viewByKey=76%2F1%2Fto%2F100%2FMajor%2Fm-cs",
        "community_college": "CC One",
        "doc_id": "000000000000000000000011",
        "id": "000000000000000000000011",
        "major": "Computer Science",
        "notes": "err note",
        "result": "error",
        "source": "verify",
        "system": "uc",
        "uc_school": "UC Alpha",
        "verified_at": "2026-05-01T00:00:00.000Z",
      },
    ],
    "flagged": [
      {
        "assist_url": "https://assist.org/transfer/results?year=76&institution=2&agreement=200&agreementType=to&view=agreement&viewBy=major&viewSendingAgreements=false&viewByKey=76%2F2%2Fto%2F200%2FMajor%2Fm-cs",
        "community_college": "CC Two",
        "doc_id": "000000000000000000000031",
        "id": "000000000000000000000031",
        "major": "Computer Science",
        "notes": "",
        "result": "flagged",
        "source": "template",
        "system": "uc",
        "uc_school": "UC Beta",
        "verified_at": "2026-05-04T00:00:00.000Z",
      },
    ],
    "stale": [
      {
        "assist_url": null,
        "community_college": null,
        "current_parser_output_hash": null,
        "current_raw_template_hash": null,
        "current_template_fp": null,
        "doc_id": "000000000000000000000099",
        "id": "000000000000000000000099",
        "major": "Physics",
        "notes": "",
        "prior_parser_output_hash": "poX",
        "prior_raw_template_hash": "hashX",
        "prior_result": "error",
        "prior_template_fp": "fpX",
        "reason": "deleted",
        "source": "verify",
        "system": "uc",
        "uc_school": "UC Beta",
        "verified_at": "2026-05-07T00:00:00.000Z",
      },
      {
        "assist_url": "https://assist.org/transfer/results?year=76&institution=1&agreement=100&agreementType=to&view=agreement&viewBy=major&viewSendingAgreements=false&viewByKey=76%2F1%2Fto%2F100%2FMajor%2Fm-cs",
        "community_college": "CC One",
        "current_parser_output_hash": "poA",
        "current_raw_template_hash": "hashA",
        "current_template_fp": "fpA",
        "doc_id": "000000000000000000000013",
        "id": "000000000000000000000013",
        "major": "Computer Science",
        "notes": "",
        "prior_parser_output_hash": "poA",
        "prior_raw_template_hash": "OLDHASH",
        "prior_result": "error",
        "prior_template_fp": "fpA",
        "reason": "raw_drift",
        "source": "verify",
        "system": "uc",
        "uc_school": "UC Alpha",
        "verified_at": "2026-05-06T00:00:00.000Z",
      },
    ],
    "stats": {
      "avg_rows_per_agreement": 1.6,
      "cell_coverage_pct": 69.2308,
      "cell_observed_pct": 11.11,
      "ci_note": "95% Wilson upper bound · per randomly-drawn template, scope-restricted, finite-population corrected",
      "ci_upper_cell_pct": 36.02,
      "ci_upper_pct": 66.67,
      "ci_upper_safety_pct": 66.67,
      "ci_upper_strict_pct": 66.67,
      "cluster_strict_mismatch_upper_pct": 93.85,
      "cluster_student_risk_upper_pct": 93.85,
      "effective_coverage_pct": 0.8574,
      "effective_template_coverage_pct": 17.3746,
      "effective_verified": 0.07,
      "estimated_max_cell_errors": 9,
      "estimated_max_errors": 5,
      "estimated_max_strict": 5,
      "estimated_max_unsafe": 5,
      "n_audited": 5,
      "n_audited_clusters": 3,
      "n_audited_direct": 4,
      "n_audited_random_doc": 3,
      "n_audited_random_template": 1,
      "n_audited_targeted": 1,
      "n_cells_audited": 18,
      "n_cells_in_error": 2,
      "n_cells_total": 26,
      "n_conservative": 1,
      "n_correct": 1,
      "n_errors": 2,
      "n_errors_direct": 2,
      "n_flagged": 1,
      "n_majors": 3,
      "n_propagated_all_audited": 6,
      "n_random_clusters": 3,
      "n_random_clusters_error": 2,
      "n_resolved": 1,
      "n_safety_audited_clusters": 1,
      "n_stale": 2,
      "n_strict_direct": 3,
      "n_templates": 3,
      "n_templates_audited": 3,
      "n_templates_correct": 1,
      "n_templates_errors": 2,
      "n_verified_via_templates": 1,
      "observed_error_pct": 40,
      "propagation_multiplier": 0.5,
      "raw_template_coverage_pct": 75,
      "safety_rate_pct": 40,
      "sample_coverage_pct": 62.5,
      "sample_scope": "all",
      "strict_rate_pct": 80,
      "template_coverage_pct": 12.5,
      "template_propagated_total": 1.39,
      "total_docs": 8,
    },
    "template_variants": [
      {
        "fp_hash": "hashA",
        "major": "Computer Science",
        "n_audited_docs": 2,
        "n_docs": 3,
        "n_groups": 1,
        "n_parser_shapes": 1,
        "n_receivers": 2,
        "notes": "err note",
        "raw_template_hash": "hashA",
        "resolution_notes": "",
        "result": "error",
        "school": "UC Alpha",
        "school_id": 100,
        "source": "uc_template",
        "status": null,
        "system": "uc",
        "verified_at": "2026-05-01T00:00:00.000Z",
      },
      {
        "fp_hash": "hashB",
        "major": "Mathematics",
        "n_audited_docs": 1,
        "n_docs": 1,
        "n_groups": 1,
        "n_parser_shapes": 1,
        "n_receivers": 3,
        "notes": "",
        "raw_template_hash": "hashB",
        "resolution_notes": "",
        "result": "correct",
        "school": "UC Alpha",
        "school_id": 100,
        "source": "uc_template",
        "status": null,
        "system": "uc",
        "verified_at": "2026-05-03T00:00:00.000Z",
      },
      {
        "fp_hash": "fpNH",
        "major": "Chemistry",
        "n_audited_docs": 0,
        "n_docs": 1,
        "n_groups": 1,
        "n_parser_shapes": 1,
        "n_receivers": 2,
        "notes": "",
        "raw_template_hash": "fpNH",
        "resolution_notes": "",
        "result": null,
        "school": "UC Beta",
        "school_id": 200,
        "source": "uc_template",
        "status": null,
        "system": "uc",
        "verified_at": null,
      },
      {
        "fp_hash": "hashC",
        "major": "Computer Science",
        "n_audited_docs": 2,
        "n_docs": 2,
        "n_groups": 1,
        "n_parser_shapes": 1,
        "n_receivers": 1,
        "notes": "",
        "raw_template_hash": "hashC",
        "resolution_notes": "fixed",
        "result": "error",
        "school": "UC Beta",
        "school_id": 200,
        "source": "uc_template",
        "status": "resolved",
        "system": "uc",
        "verified_at": "2026-05-05T00:00:00.000Z",
      },
    ],
  },
  "filter": {
    "groupingId": null,
    "majorContains": "",
    "pairs": [],
    "schoolIds": [],
    "scope": "all",
    "visiblePairs": null,
  },
  "grouping": null,
  "uc": {
    "conservative": [
      {
        "assist_url": "https://assist.org/transfer/results?year=76&institution=1&agreement=100&agreementType=to&view=agreement&viewBy=major&viewSendingAgreements=false&viewByKey=76%2F1%2Fto%2F100%2FMajor%2Fm-cs",
        "community_college": "CC One",
        "doc_id": "000000000000000000000012",
        "id": "000000000000000000000012",
        "major": "Computer Science",
        "notes": "",
        "result": "conservative",
        "source": "verify",
        "system": "uc",
        "uc_school": "UC Alpha",
        "verified_at": "2026-05-02T00:00:00.000Z",
      },
    ],
    "errors": [
      {
        "assist_url": "https://assist.org/transfer/results?year=76&institution=1&agreement=100&agreementType=to&view=agreement&viewBy=major&viewSendingAgreements=false&viewByKey=76%2F1%2Fto%2F100%2FMajor%2Fm-cs",
        "community_college": "CC One",
        "doc_id": "000000000000000000000011",
        "id": "000000000000000000000011",
        "major": "Computer Science",
        "notes": "err note",
        "result": "error",
        "source": "verify",
        "system": "uc",
        "uc_school": "UC Alpha",
        "verified_at": "2026-05-01T00:00:00.000Z",
      },
    ],
    "flagged": [
      {
        "assist_url": "https://assist.org/transfer/results?year=76&institution=2&agreement=200&agreementType=to&view=agreement&viewBy=major&viewSendingAgreements=false&viewByKey=76%2F2%2Fto%2F200%2FMajor%2Fm-cs",
        "community_college": "CC Two",
        "doc_id": "000000000000000000000031",
        "id": "000000000000000000000031",
        "major": "Computer Science",
        "notes": "",
        "result": "flagged",
        "source": "template",
        "system": "uc",
        "uc_school": "UC Beta",
        "verified_at": "2026-05-04T00:00:00.000Z",
      },
    ],
    "stale": [
      {
        "assist_url": null,
        "community_college": null,
        "current_parser_output_hash": null,
        "current_raw_template_hash": null,
        "current_template_fp": null,
        "doc_id": "000000000000000000000099",
        "id": "000000000000000000000099",
        "major": "Physics",
        "notes": "",
        "prior_parser_output_hash": "poX",
        "prior_raw_template_hash": "hashX",
        "prior_result": "error",
        "prior_template_fp": "fpX",
        "reason": "deleted",
        "source": "verify",
        "system": "uc",
        "uc_school": "UC Beta",
        "verified_at": "2026-05-07T00:00:00.000Z",
      },
      {
        "assist_url": "https://assist.org/transfer/results?year=76&institution=1&agreement=100&agreementType=to&view=agreement&viewBy=major&viewSendingAgreements=false&viewByKey=76%2F1%2Fto%2F100%2FMajor%2Fm-cs",
        "community_college": "CC One",
        "current_parser_output_hash": "poA",
        "current_raw_template_hash": "hashA",
        "current_template_fp": "fpA",
        "doc_id": "000000000000000000000013",
        "id": "000000000000000000000013",
        "major": "Computer Science",
        "notes": "",
        "prior_parser_output_hash": "poA",
        "prior_raw_template_hash": "OLDHASH",
        "prior_result": "error",
        "prior_template_fp": "fpA",
        "reason": "raw_drift",
        "source": "verify",
        "system": "uc",
        "uc_school": "UC Alpha",
        "verified_at": "2026-05-06T00:00:00.000Z",
      },
    ],
    "stats": {
      "avg_rows_per_agreement": 1.6,
      "cell_coverage_pct": 69.2308,
      "cell_observed_pct": 11.11,
      "ci_note": "95% Wilson upper bound · per randomly-drawn template, scope-restricted, finite-population corrected",
      "ci_upper_cell_pct": 36.02,
      "ci_upper_pct": 66.67,
      "ci_upper_safety_pct": 66.67,
      "ci_upper_strict_pct": 66.67,
      "cluster_strict_mismatch_upper_pct": 93.85,
      "cluster_student_risk_upper_pct": 93.85,
      "effective_coverage_pct": 0.8574,
      "effective_template_coverage_pct": 17.3746,
      "effective_verified": 0.07,
      "estimated_max_cell_errors": 9,
      "estimated_max_errors": 5,
      "estimated_max_strict": 5,
      "estimated_max_unsafe": 5,
      "n_audited": 5,
      "n_audited_clusters": 3,
      "n_audited_direct": 4,
      "n_audited_random_doc": 3,
      "n_audited_random_template": 1,
      "n_audited_targeted": 1,
      "n_cells_audited": 18,
      "n_cells_in_error": 2,
      "n_cells_total": 26,
      "n_conservative": 1,
      "n_correct": 1,
      "n_errors": 2,
      "n_errors_direct": 2,
      "n_flagged": 1,
      "n_majors": 3,
      "n_propagated_all_audited": 6,
      "n_random_clusters": 3,
      "n_random_clusters_error": 2,
      "n_resolved": 1,
      "n_safety_audited_clusters": 1,
      "n_stale": 2,
      "n_strict_direct": 3,
      "n_templates": 3,
      "n_templates_audited": 3,
      "n_templates_correct": 1,
      "n_templates_errors": 2,
      "n_verified_via_templates": 1,
      "observed_error_pct": 40,
      "propagation_multiplier": 0.5,
      "raw_template_coverage_pct": 75,
      "safety_rate_pct": 40,
      "sample_coverage_pct": 62.5,
      "sample_scope": "all",
      "strict_rate_pct": 80,
      "template_coverage_pct": 12.5,
      "template_propagated_total": 1.39,
      "total_docs": 8,
    },
    "template_variants": [
      {
        "fp_hash": "hashA",
        "major": "Computer Science",
        "n_audited_docs": 2,
        "n_docs": 3,
        "n_groups": 1,
        "n_parser_shapes": 1,
        "n_receivers": 2,
        "notes": "err note",
        "raw_template_hash": "hashA",
        "resolution_notes": "",
        "result": "error",
        "school": "UC Alpha",
        "school_id": 100,
        "source": "uc_template",
        "status": null,
        "system": "uc",
        "verified_at": "2026-05-01T00:00:00.000Z",
      },
      {
        "fp_hash": "hashB",
        "major": "Mathematics",
        "n_audited_docs": 1,
        "n_docs": 1,
        "n_groups": 1,
        "n_parser_shapes": 1,
        "n_receivers": 3,
        "notes": "",
        "raw_template_hash": "hashB",
        "resolution_notes": "",
        "result": "correct",
        "school": "UC Alpha",
        "school_id": 100,
        "source": "uc_template",
        "status": null,
        "system": "uc",
        "verified_at": "2026-05-03T00:00:00.000Z",
      },
      {
        "fp_hash": "fpNH",
        "major": "Chemistry",
        "n_audited_docs": 0,
        "n_docs": 1,
        "n_groups": 1,
        "n_parser_shapes": 1,
        "n_receivers": 2,
        "notes": "",
        "raw_template_hash": "fpNH",
        "resolution_notes": "",
        "result": null,
        "school": "UC Beta",
        "school_id": 200,
        "source": "uc_template",
        "status": null,
        "system": "uc",
        "verified_at": null,
      },
      {
        "fp_hash": "hashC",
        "major": "Computer Science",
        "n_audited_docs": 2,
        "n_docs": 2,
        "n_groups": 1,
        "n_parser_shapes": 1,
        "n_receivers": 1,
        "notes": "",
        "raw_template_hash": "hashC",
        "resolution_notes": "fixed",
        "result": "error",
        "school": "UC Beta",
        "school_id": 200,
        "source": "uc_template",
        "status": "resolved",
        "system": "uc",
        "verified_at": "2026-05-05T00:00:00.000Z",
      },
    ],
  },
}
`;

exports[`audit stats — _statsData (getStats) > matches the pinned stats snapshot 1`] = `
{
  "avg_rows_per_agreement": 1.6,
  "cell_coverage_pct": 69.2308,
  "cell_observed_pct": 11.11,
  "ci_note": "95% Wilson upper bound · per randomly-drawn template, scope-restricted, finite-population corrected",
  "ci_upper_cell_pct": 36.02,
  "ci_upper_pct": 66.67,
  "ci_upper_safety_pct": 66.67,
  "ci_upper_strict_pct": 66.67,
  "cluster_strict_mismatch_upper_pct": 93.85,
  "cluster_student_risk_upper_pct": 93.85,
  "effective_coverage_pct": 0.8574,
  "effective_template_coverage_pct": 17.3746,
  "effective_verified": 0.07,
  "estimated_max_cell_errors": 9,
  "estimated_max_errors": 5,
  "estimated_max_strict": 5,
  "estimated_max_unsafe": 5,
  "n_audited": 5,
  "n_audited_clusters": 3,
  "n_audited_direct": 4,
  "n_audited_random_doc": 3,
  "n_audited_random_template": 1,
  "n_audited_targeted": 1,
  "n_cells_audited": 18,
  "n_cells_in_error": 2,
  "n_cells_total": 26,
  "n_conservative": 1,
  "n_correct": 1,
  "n_errors": 2,
  "n_errors_direct": 2,
  "n_flagged": 1,
  "n_majors": 3,
  "n_propagated_all_audited": 6,
  "n_random_clusters": 3,
  "n_random_clusters_error": 2,
  "n_resolved": 1,
  "n_safety_audited_clusters": 1,
  "n_stale": 2,
  "n_strict_direct": 3,
  "n_templates": 3,
  "n_templates_audited": 3,
  "n_templates_correct": 1,
  "n_templates_errors": 2,
  "n_verified_via_templates": 1,
  "observed_error_pct": 40,
  "propagation_multiplier": 0.5,
  "raw_template_coverage_pct": 75,
  "safety_rate_pct": 40,
  "sample_coverage_pct": 62.5,
  "sample_scope": "all",
  "strict_rate_pct": 80,
  "template_coverage_pct": 12.5,
  "template_propagated_total": 1.39,
  "total_docs": 8,
}
`;

exports[`audit template variants — _templateVariantsData (getTemplateVariants) > matches the pinned template-variants snapshot 1`] = `
[
  {
    "fp_hash": "hashA",
    "major": "Computer Science",
    "n_audited_docs": 3,
    "n_docs": 3,
    "n_groups": 1,
    "n_parser_shapes": 1,
    "n_receivers": 2,
    "notes": "err note",
    "raw_template_hash": "hashA",
    "resolution_notes": "",
    "result": "error",
    "sample_cc": "CC One",
    "sample_doc_id": "000000000000000000000011",
    "sample_university_id": 100,
    "school": "UC Alpha",
    "school_id": 100,
    "source": "uc_template",
    "status": null,
    "system": "uc",
    "verified_at": "2026-05-01T00:00:00.000Z",
  },
  {
    "fp_hash": "hashB",
    "major": "Mathematics",
    "n_audited_docs": 1,
    "n_docs": 1,
    "n_groups": 1,
    "n_parser_shapes": 1,
    "n_receivers": 3,
    "notes": "",
    "raw_template_hash": "hashB",
    "resolution_notes": "",
    "result": "correct",
    "sample_cc": "CC One",
    "sample_doc_id": "000000000000000000000021",
    "sample_university_id": 100,
    "school": "UC Alpha",
    "school_id": 100,
    "source": "uc_template",
    "status": null,
    "system": "uc",
    "verified_at": "2026-05-03T00:00:00.000Z",
  },
  {
    "fp_hash": "fpNH",
    "major": "Chemistry",
    "n_audited_docs": 0,
    "n_docs": 1,
    "n_groups": 1,
    "n_parser_shapes": 1,
    "n_receivers": 2,
    "notes": "",
    "raw_template_hash": "fpNH",
    "resolution_notes": "",
    "result": null,
    "sample_cc": "CC One",
    "sample_doc_id": "000000000000000000000051",
    "sample_university_id": 200,
    "school": "UC Beta",
    "school_id": 200,
    "source": "uc_template",
    "status": null,
    "system": "uc",
    "verified_at": null,
  },
  {
    "fp_hash": "hashC",
    "major": "Computer Science",
    "n_audited_docs": 2,
    "n_docs": 2,
    "n_groups": 1,
    "n_parser_shapes": 1,
    "n_receivers": 1,
    "notes": "",
    "raw_template_hash": "hashC",
    "resolution_notes": "fixed",
    "result": "error",
    "sample_cc": "CC Two",
    "sample_doc_id": "000000000000000000000032",
    "sample_university_id": 200,
    "school": "UC Beta",
    "school_id": 200,
    "source": "uc_template",
    "status": "resolved",
    "system": "uc",
    "verified_at": "2026-05-05T00:00:00.000Z",
  },
]
`;
